# Assegnamento2

./: CMakeLists.txt  High_speed_train.cpp  High_speed_train.h  High_speed_train_super.cpp  High_speed_train_super.h  Rail.h  Regional_train.cpp  Regional_train.h  Station.cpp  Station.h  StationLink.h  TimeTable.cpp  TimeTable.h  Train.cpp  Train.h  Train_status.h  Train_type.h  line_description.txt  line_description1.txt  main  main_station.cpp  prove.cpp  timetables.txt
